# gitlab-poetry-test

./: .gitlab-ci.yml  README.md  pyproject.toml
