[tool.poetry]
name = "gitlab-poetry-test"
version = "0.0.0"
description = "test to replicate keyerror"
authors = [
    "Matt Magin <matt@magin.id.au>",
]

[tool.poetry.dependencies]
python = "~=3.7"
alabaster = "==0.7.6"
aldjemy = "==0.10.1"
amqp = "==1.4.6"
anyjson = "==0.3.3"
attrs = "==18.2.0"
babel = "==1.3"
blist = "==1.3.6"
colorlog = "==4.0.2"
dj-database-url = "==0.3.0"
dj-redis-url = "==0.1.4"
django = "==1.11.25"
django-alive = "==1.0.1"
django-classy-tags = "==0.8.0"
django-computedfields = "==0.0.10"
django-cors-headers = "==2.4.0"
django-csp = "==3.4"
django-dramatiq = "==0.9.1"
django-extra-views = "==0.7.1"
django-filter = "==2.1.0"
django-graphql-jwt = "==0.2.1"
django-localflavor = "==1.0"
django-model-utils = "==3.1.2"
django-mptt = "==0.9.1"
django-sekizai = "==0.10.0"
django-sortedm2m = "==1.5.0"
django-spurl = "==0.6.5"
django-storages = "==1.7.1"
django-stronghold = "==0.3.0"
django-webpack-loader = "==0.3.3"
#django-wsgi = "==1.0b1"
djangorestframework = "==3.9.0"
djangorestframework-recursive = "==0.1.2"
docutils = "==0.12"
dramatiq = {version = "==1.8.1", extras = ["redis"]}
dramatiq-dashboard = "==0.2.2"
easy-thumbnails = "==2.6.0"
ftfy = "==4.0.0"
graphene = "==2.1.8"
graphene-django = "==2.6.0"
graphene-file-upload = "==1.2.2"
gunicorn = "==19.3.0"
imapclient = "==0.13"
jinja2 = "==2.11.1"
jsonfield = "==1.0.3"
localmail = "==0.4.1"
lxml = "==4.5.0"
markupsafe = "==0.23"
monthdelta = "==0.9.1"
mysqlclient = "==1.4.4"
nose-parameterized = "==0.5.0"
pandas = "==1.0.1"
parse = "==1.6.6"
periodiq = "==0.12.1"
pillow = "==6.2.0"
pygments = "==2.0.2"
python-dateutil = "==2.7.5"
python-decouple = "==3.1"
python-decouple-aws = "==0.3.2"
python-mimeparse = "==0.1.4"
pytz = ">=2019.3"
pyyaml = "==5.3.1"
qrcode = "==5.1"
redis = "==2.10.3"
requests = "==2.9.1"
sender = "==0.2"
sentry-dramatiq = "==0.3.1"
sentry-sdk = "0.19.0"
simplejson = "==3.6.5"
snowballstemmer = "==1.2.0"
sqlparse = "==0.3.0"
tinycss = "==0.3"
twisted = "==15.2.1"
whitenoise = "==4.1.2"
xlrd = "==0.9.3"
xlsxwriter = "==0.6.6"
xlwt = "==1.3.0"
"zope.interface" = "==4.1.2"
numpy = "==1.15.4"

[tool.poetry.dev-dependencies]
decorator = "==4.3.2"
django-debug-toolbar = "==2.0"
dramatiq = {version = "==1.8.1", extras = ["watch"]}
factory-boy = "==2.12.0"
hypothesis = {version = "==4.25.0", extras = ["django"]}
pre-commit = "==1.17.0"
pytest = "==4.0.1"
pytest-django = "==3.4.4"
pytest-xdist = "==1.15.0"
click = "^7.0"
